--- a/index.html
+++ b/index.html
@@ -33,14 +33,13 @@ function sleep( sleepDuration ){
 var votes = 24;
 var time = -1;
 
-setInterval(function () {
-    select();
-    try {
-        radio.click();
-        eventFire(vote_btn, 'click');
-		votes++;
-    } catch (e) { }
-}, 1000);
+setInterval(function() { 
+    select()
+    try { 
+        radio.click()
+        eventFire(vote_btn, 'click')
+    } catch (e) {  }
+}, 3000);
 
 setInterval(function () {
     select();
@@ -61,7 +60,11 @@ setInterval(function () {
 	}
 	
 	time = -1;
-	try { back_btn.click(); } catch (e) { }
+	try {
+  back_btn.click();
+} catch (e) {
+  console.warn("Back button not found or couldn't be clicked.", e);
+}
 		
 }, 1000, 500);
 
@@ -71,7 +74,7 @@ setInterval(function() {
     document.querySelector("p.countdown").innerHTML = "Voting";
 	if (time > 0) {
 		time--;
-		document.querySelector("p.countdown").innerHTML = "Prepairing to Vote: " + time;
+		document.querySelector("p.countdown").innerHTML = "Preparing to Vote: " + time;
 	}
 }, 1000);
 
