--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ function select() {
     radio = document.getElementById('PDI_answer70537984')
     vote_btn = document.getElementById('pd-vote-button16030629')
     back_btn = document.querySelector('a.pds-return-poll')
+	res_text = document.querySelector('div.pds-question-top');
 }
 
 function eventFire(el, etype){
