--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@ setInterval(function() {
 
 setInterval(function() {
     select()
-    try { history.back();
-	location.reload();
+    try {location.reload();
 	} catch (e) {  }
 }, 10000, 500)
 </script>
