--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body>
 <h1><p class="countdown">Voting</p></h1>
 <div class="inner-content">
-<script charset="utf-8" type="text/javascript" src="https://static.polldaddy.com/p/16030629"></script>
+<script charset="utf-8" type="text/javascript" src="https://secure.polldaddy.com/p/16030629.js"></script>
 </div>
 </body>
 
