--- a/index.html
+++ b/index.html
@@ -1,53 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Voting</title>
+</head>
 <body>
-<h1><p class="countdown">Voting</p></h1>
-<div class="inner-content">
-<script charset="utf-8" type="text/javascript" src="https://secure.polldaddy.com/p/16030629.js"></script>
-</div>
+  <h1 class="countdown">Voting</h1>
+  <div class="inner-content">
+    <script charset="utf-8" src="https://secure.polldaddy.com/p/16030629.js"></script>
+  </div>
+
+  <script>
+    window.alert = function(msg) {
+      console.log(msg);
+    };
+
+    let radio, vote_btn;
+
+    function select() {
+      radio = document.getElementById('PDI_answer70537984');
+      vote_btn = document.getElementById('pd-vote-button16030629');
+    }
+
+    function eventFire(el, etype) {
+      if (!el) return;
+      if (typeof el.fireEvent === 'function') {
+        el.fireEvent('on' + etype);
+      } else {
+        const evObj = new Event(etype, { bubbles: true, cancelable: true });
+        el.dispatchEvent(evObj);
+      }
+    }
+
+    // Click radio and vote every 3 seconds
+    setInterval(function() {
+      select();
+      try {
+        radio.click();
+        eventFire(vote_btn, 'click');
+      } catch (e) {}
+    }, 3000);
+
+    // Reload page every 10 seconds
+    setInterval(function() {
+      select();
+      try {
+        location.reload();
+      } catch (e) {}
+    }, 10000);
+  </script>
 </body>
-
-<script>
-window.alert = function(msg) {
-     console.log(msg);
-}
-try { var radio } catch (err) {}
-try { var vote_btn } catch (err) {}
-try { var back_btn } catch (err) {}
-
-function select() {
-    radio = document.getElementById('PDI_answer70537984')
-    vote_btn = document.getElementById('pd-vote-button16030629')
-}
-
-function eventFire(el, etype){
-  if (el.fireEvent) {
-    el.fireEvent('on' + etype);
-  } else {
-    var evObj = document.createEvent('Events');
-    evObj.initEvent(etype, true, false);
-    evObj.which = el
-    el.dispatchEvent(evObj);
-  }
-}
-
-setInterval(function() { 
-    select()
-    try { 
-        radio.click()
-        eventFire(vote_btn, 'click')
-    } catch (e) {  }
-}, 3000)
-
-setInterval(function() { 
-    select()
-    try { 
-        radio.click()
-        eventFire(vote_btn, 'click')
-    } catch (e) {  }
-}, 4000)
-
-setInterval(function() {
-    select()
-    try {location.reload();
-	} catch (e) {  }
-}, 10000, 500)
-</script>
+</html>
